# whl-conf

./: .gitignore  README.md  pyproject.toml
whl_conf/: cli.py  config.py  config_compare.py  config_manage.py  confs_lock.py  main.py  manifest.py  meta.py  utils.py
whl_conf/confs/edu/: manifest.yaml  meta.yaml
whl_conf/confs/logistics/: manifest.yaml  meta.yaml
whl_conf/confs/template/: manifest.yaml  meta.yaml
whl_conf/data/: default_template.yaml  meta.yaml
whl_conf/validator/: existence.py  transform.py
