[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whl-conf"
version = "0.0.2"
description = "A configuration management tool for WheelOS."
readme = "README.md"
authors = [
  { name = "daohu527", email = "daohu527@gmail.com" }
]
urls = { Homepage = "https://github.com/wheelos-tools/whl-conf", "Bug Tracker" = "https://github.com/wheelos-tools/whl-conf/issues" }
classifiers = [
  "Development Status :: 3 - Alpha", # Project's development stage
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6", # Supported Python versions
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only", # Python 3 only
  "License :: OSI Approved :: MIT License", # Specify license type
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools", # More specific category
  "Topic :: Utilities"
]

# Python version requirements.
requires-python = ">=3.6" # Consider >=3.8 or >=3.9 for newer features/security

# Runtime dependencies
dependencies = [
  "filelock>=3.0.0,<4.0.0",
  "pyyaml"
]

# Keywords for PyPI search.
keywords = ["whl-conf", "wheelos", "configuration-management", "cli-tool"]

[project.scripts]
# Command-line entry points.
whl-conf = "whl_conf.cli:main" # Match CLI name to project name for consistency

[tool.setuptools]
package-dir = { "" = "." } # Root directory for Python packages

[tool.setuptools.packages.find]
# Automatically discover Python packages.
where = ["."]
# exclude = ["tests*", "docs*"]
