[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whl-conf"
version = "0.0.7"
description = "A configuration management tool for WheelOS."
readme = "README.md"
authors = [
  { name = "daohu527", email = "daohu527@gmail.com" }
]
urls = { Homepage = "https://github.com/wheelos-tools/whl-conf", "Bug Tracker" = "https://github.com/wheelos-tools/whl-conf/issues" }
classifiers = [
  "Development Status :: 3 - Alpha", # Project's development stage
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6", # Supported Python versions
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only", # Python 3 only
  "License :: OSI Approved :: MIT License", # Specify license type
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools", # More specific category
  "Topic :: Utilities"
]

# Python version requirements.
requires-python = ">=3.6"

# Runtime dependencies
dependencies = [
  "filelock>=3.0.0,<4.0.0",
  "pyyaml"
]

# Keywords for PyPI search.
keywords = ["whl-conf", "wheelos", "configuration-management", "cli-tool"]

[project.scripts]
# Command-line entry points.
whl-conf = "whl_conf.cli:main"

[tool.setuptools]
package-dir = { "" = "." }
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
# exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
whl_conf = ["data/*.yaml"]
